--- a/weather app in class/index.html
+++ b/weather app in class/index.html
@@ -4,34 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="reset.css" />
-    <style>
-      header {
-        height: 100px;
-        background-color: slategray;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      main {
-        height: calc(100vh - 100px);
-        background-color: darkgreen;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
-      }
-
-      .input-container {
-        display: flex;
-        gap: 1rem;
-      }
-      .weather-container {
-        display: flex;
-        gap: 1rem;
-      }
-    </style>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
@@ -60,6 +34,5 @@
         </div>
       </div>
     </main>
-    
   </body>
 </html>
