Remove MY LOCATION heading

--- a/weather app/weather app in class/index.html
+++ b/weather app/weather app in class/index.html
@@ -34,22 +34,9 @@
           </div>
           <div class="city-temp" id="sidebar-temp">28°</div>
         </div>
-        <!-- Static mock cities as in reference image -->
-        <div class="city-card">
-          <div class="city-info">
-            <p class="time-small">12:08</p>
-            <h3>New Delhi</h3>
-            <p class="summary">Mostly Cloudy</p>
-          </div>
-          <div class="city-temp">17°</div>
-        </div>
-        <div class="city-card">
-          <div class="city-info">
-            <p class="time-small">12:08</p>
-            <h3>Mumbai</h3>
-            <p class="summary">Sunny</p>
-          </div>
-          <div class="city-temp">29°</div>
+        <!-- Search History Container -->
+        <div id="search-history-container">
+          <!-- Dynamic history items will be added here -->
         </div>
       </div>
     </aside>
@@ -65,7 +52,7 @@
         <header class="current-weather-header">
           <div class="header-content">
             <div class="location-summary">
-              <span class="loc-label">MY LOCATION</span>
+              <!-- Removed 'MY LOCATION' label -->
               <h1 class="city-name" id="main-city">Pimpri Chinchwad</h1>
               <div class="main-temp-summary">
                 <span class="main-temp" id="main-temp">28°</span>
